correction collapse

--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -74,6 +74,11 @@ body {
   line-height: 3.4rem;
 }
 
+.text-open,
+.text-closed {
+  padding: 2rem;
+}
+
 .rental-collapses {
   display: flex;
   flex-direction: row;
@@ -87,8 +92,10 @@ body {
 .rental-collapses .collapse ul {
   list-style-type: none;
   margin-left: -3rem;
+  margin-top: 0;
 }
-.rental-collapses .collapse .collapse-text div {
+.rental-collapses .collapse .text-open,
+.rental-collapses .collapse .text-closed {
   min-height: 30rem;
 }
 
